// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-dispatching state.from behaves as if original action was dispatched 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "pathname": "/second",
    "pop": false,
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`re-dispatching state.from behaves as if original action was dispatched: response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "allow": true,
        },
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 2,
    "key": "345678",
    "kind": "push",
    "length": 3,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
      ],
      "hash": "",
      "index": 1,
      "key": "345678",
      "kind": "replace",
      "length": 2,
      "params": Object {},
      "pathname": "/redirected",
      "pop": false,
      "query": Object {},
      "ready": true,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 302,
      "type": "REDIRECTED",
      "url": "/redirected",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {
    "allow": true,
  },
  "type": "SECOND",
}
`;

exports[`re-dispatching state.from behaves as if original action was dispatched: state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "allow": true,
        },
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 2,
    "key": "345678",
    "kind": "push",
    "length": 3,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "url": "/redirected",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "REDIRECTED",
        },
      ],
      "hash": "",
      "index": 1,
      "key": "345678",
      "kind": "replace",
      "length": 2,
      "params": Object {},
      "pathname": "/redirected",
      "pop": false,
      "query": Object {},
      "ready": true,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 302,
      "type": "REDIRECTED",
      "url": "/redirected",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "allow": true,
    },
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;
